[build-system]
requires = [
    "setuptools>=75.0",
    "build>=1.2.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "mneia-exporter"
version = "0.0.1"
dependencies = [
    "django>=5.1.5",
    "djangorestframework >= 3.15.2",
    "django-cors-headers >= 4.6.0",
    "requests >= 2.32.3",
    "termcolor",
    "mneia_backend",

]
description = "A data exporter for Mneia."
readme = "README.md"
requires-python = ">= 3.10"
authors = [
    {name = "Marios Zindilis", email = "marios@mneia.gr"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://mneia.gr/"

[dependency-groups]
# `pip` supports `dependency-groups` from version 25.1. Usage:
#
#   pip install --group build
#   pip install --group test
#
# References:
#
#   https://github.com/pypa/pip/issues/12963
#   https://github.com/pypa/pip/pull/13065
#
# You only need "build" dependencies if you are building the package locally:
build = ["setuptools", "build"]
# You only need test dependencies if you are running unit tests:
test = [
    "pytest",
    "pytest-cov",
    "pytest-django",
    "flake8",
    "flake8-pyproject",
    "black",
    "isort",
    "bandit",
    "coverage",
]

[tool.flake8]
max-line-length=120

[tool.black]
    line-length = 120

[tool.isort]
    multi_line_output = 3  # https://pycqa.github.io/isort/docs/configuration/options.html#multi-line-output
    include_trailing_comma = true  # require trailing comma at the end of a list of imports in parentheses
    line_length = 120  # https://pycqa.github.io/isort/docs/configuration/options.html#line-length

[tool.bandit]
    assert_used = { skips = [ "*/test_*.py" ] } # Allow `assert` to be used in tests

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mneia_exporter.tests.settings"

[tool.coverage.run]
source = ["."]
omit = [
    "manage.py",
    "conftest.py",
    "mneia_exporter/migrations/*.py",
    "mneia_exporter/tests/*",
]

[tool.coverage.report]
show_missing = true
